set width on lecture item for home page to prevent bad wrapping
git-svn-id: https://svn.library.cornell.edu/efraimrackertheme/trunk@310 9597bc91-b0d9-4081-9644-6f6672fb8dfc

--- a/css/_home.scss
+++ b/css/_home.scss
@@ -113,6 +113,7 @@
 	margin-bottom: 10px;
 	background: url("../images/interview-bg.png") no-repeat bottom;
 	border-bottom: 1px solid $paleTeal;
+	width: 100%;
 	img {
 		float: left;
 		margin-right: 10px;
